helm/apps/vaultwarden/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.kds-dev.com`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
    - match: Host(`vaultwarden.kds-dev.com`) && Path(`/notifications/hub`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 3012
  tls: {}
